--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <div class="slide__image">
                   <img
                     data-title="Photo of Grand Kanyon"
-                    class="slide__photo"
-                    src="./images/IMG_5800.jpg"
-                    alt="image"
+                    class="slide__picture"
+                    src="./images/04.jpg"
+                    alt="Image"
                   />
                 </div>
               </div>
@@ -29,9 +29,9 @@
                 <div class="slide__image">
                   <img
                     data-title="Photo of Grand Kanyon"
-                    class="slide__photo"
-                    src="./images/IMG_5805.jpg"
-                    alt="image"
+                    class="slide__picture"
+                    src="./images/01.jpg"
+                    alt="Image"
                   />
                 </div>
               </div>
@@ -41,9 +41,9 @@
                 <div class="slide__image">
                   <img
                     data-title="Photo of Grand Kanyon"
-                    class="slide__photo"
-                    src="./images/IMG_5801.jpg"
-                    alt="image"
+                    class="slide__picture"
+                    src="./images/02.jpg"
+                    alt="Image"
                   />
                 </div>
               </div>
@@ -53,9 +53,9 @@
                 <div class="slide__image">
                   <img
                     data-title="Photo of Grand Kanyon"
-                    class="slide__photo"
-                    src="./images/IMG_5803.jpg"
-                    alt="image"
+                    class="slide__picture"
+                    src="./images/03.jpg"
+                    alt="Image"
                   />
                 </div>
               </div>
