fixed the grammar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Photo of Grand Kanyon"
+                    data-title="Photo of Grand Canyon"
                     class="slide__picture"
                     src="./images/04.jpg"
                     alt="Image"
