--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Photo of Grand Kanyon"
+                    data-title="Photo of Grand Canyon"
                     class="slide__picture"
                     src="./images/01.jpg"
                     alt="Image"
@@ -41,7 +41,7 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Photo of Grand Kanyon"
+                    data-title="Photo of Grand Canyon"
                     class="slide__picture"
                     src="./images/02.jpg"
                     alt="Image"
@@ -53,7 +53,7 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Photo of Grand Kanyon"
+                    data-title="Photo of Grand Canyon"
                     class="slide__picture"
                     src="./images/03.jpg"
                     alt="Image"
